--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <h1>We&rsquo;ll be up and running soon!</h1>
     <div>
         <p>&#268;im se malo sna&#273;emo!</p>
+	<p>nes novo</p>
+	<p>nes trece</p>
     </div>
 </article>
